--- a/docs/styles.css
+++ b/docs/styles.css
@@ -95,36 +95,11 @@ nav {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 100vw;
-    height: 100vh;
+    width: 300vmax;
+    height: 300vmax;
     transform: translate(-50%, -50%);
     pointer-events: none;
     border: none;
-}
-
-@media screen and (max-aspect-ratio: 16/9) {
-    .video-background iframe {
-        width: 200vh;
-        height: 100vh;
-        transform: translate(-50%, -50%) scale(1.2);
-    }
-}
-
-@media screen and (min-aspect-ratio: 16/9) {
-    .video-background iframe {
-        width: 100vw;
-        height: 56.25vw;
-        transform: translate(-50%, -50%) scale(1.2);
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .video-background iframe {
-        width: auto;
-        height: 100vh;
-        min-width: 150%;
-        transform: translate(-50%, -50%) scale(1.7);
-    }
 }
 
 .hero-content {
